--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -42,6 +42,7 @@
         <li>17 ounces (500 grams) fresh mozzarella cheese, shredded</li>
         <li>13 ounces (375 grams) fresh lasagna sheets*</li>
     </ul>
+    <h4>Steps</h4>
     <ol>
         <li>Heat oil in a large pot over medium heat, then add in the onion and carrots and cook for 8-10 minutes, or
             until softened. Add in the garlic and sauté for about 1 minute, until fragrant.</li>
